--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@prisma/client": "^6.19.1",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
-    "prisma": "^6.19.1"
+    "multer": "^2.0.2",
+    "prisma": "^6.19.1",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
